# maurice

./: .gitignore  Cargo.toml  Manifest.toml  README.md  from_Pkg_jl_README.md  pluto.jl
.github/workflows/: greetings.yml  julia-rust.yml
Daniel/: Project.toml
Daniel/docs/: make.jl
Daniel/docs/src/: index.md
Daniel/src/: Daniel.jl
Daniel/tests/: run_tests.jl
juliaup_tmp/juliaup/: config_file.rs  global_paths.rs  julialauncher.rs  mod.rs  versions_file.rs
src/: lib.rs  main.rs
src/add_package/: mod.rs
src/compile/: application.rs
src/jl_command/: mod.rs  pluto_nb.rs
src/julia/: Gaston.jl  Hooks.jl  Maurice.jl  PkgAPI.jl  hooks.rs  mod.rs
src/new/: activate_new.rs  app.rs  mod.rs  package.rs  project.rs  script.rs  script.rs.bak
src/pkg/: activate.rs  add_package.rs  mod.rs  remove_package.rs  status.rs  update.rs
src/status/: mod.rs
src/test_command/: mod.rs  run_tests.rs
test/: runtests.jl
