[package]
name = "gt"
description = "Gaston (gt): the Julia project manager"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
capitalize = "0.1.0"
# chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4.1.4", features = ["derive", "cargo"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
# ctrlc-handler = "0.1.2"
dialoguer = "0.10.3"
# cluFlock = "1.2.7"
# console = "0.15.5"

dirs = "4.0.0"
duct = "0.13.6"

jlrs = { version = "0.17.0", features = ["sync-rt"] }
# signal-hook = "0.3.14"
# xshell = "0.2.3"

# normpath = "1.1.0"
# semver = "1.0.16"
# serde = { version = "1.0.152", features = ["derive"] }
# serde_json = "1.0.91"
# thiserror = "1.0.38"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.26" }

[dev-dependencies]
assert_cmd = "2.0.4"
